Workshop HoGent/force-app/main/default/objects/Sale__c/fields/Total_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sale_Price__c</fullName>
    <label>Total Sale Price</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>