Workshop HoGent/force-app/main/default/objects/Sale__c/fields/Unique_Sale_Number__c.field-meta.xml
<CustomField>
    <fullName>Unique_Sale_Number__c</fullName>
    <externalId>true</externalId>
    <label>Unique Sale Number</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>